--- a/mso-convert/Cargo.toml
+++ b/mso-convert/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.72"
 clap = { version = "4.3.12", features = ["derive"] }
