--- a/rubik/Cargo.toml
+++ b/rubik/Cargo.toml
@@ -9,9 +9,8 @@ edition = "2021"
 anyhow = "1.0.72"
 clap = { version = "4.2.7", features = ["derive"] }
 rand = "0.8.5"
-cube = "0.1.0"
-two-phase = "0.1.0"
+kewb = "0.1.0"
 
+# Till <https://github.com/luckasRanarison/kewb/pull/2> hits a release.
 [patch.crates-io]
-cube = { git = "https://github.com/luckasRanarison/kewb", rev = "b4c4b0a6074002b8b5e3124ce0d270379d0708a9" }
-two-phase = { git = "https://github.com/luckasRanarison/kewb", rev = "b4c4b0a6074002b8b5e3124ce0d270379d0708a9" }
+kewb = { git = "https://github.com/luckasRanarison/kewb", rev = "2dda12af2de4b1e3acf9e34ee3d0a4526d1e8919" }
