--- a/share-vmiklos-hu-apps/Cargo.toml
+++ b/share-vmiklos-hu-apps/Cargo.toml
@@ -9,3 +9,6 @@ evalexpr = "8.1.0"
 html-escape = "0.2.11"
 hyphen = { path = "../hyphen" }
 rouille = "3.5.0"
+kewb = "0.1.0"
+serde = { version = "1.0.129", features = ["derive"] }
+serde_json = "1.0.72"
