--- a/js/rubik/package.json
+++ b/js/rubik/package.json
@@ -1,6 +1,7 @@
 {
   "license": "MIT",
   "dependencies": {
+    "@tweenjs/tween.js": "21.0.0",
     "@types/node": "18.16.1",
     "@types/three": "0.155.0",
     "@typescript-eslint/eslint-plugin": "5.59.1",
