js, rubik: rebase on top of https://github.com/joews/rubik-js
Mostly because https://github.com/Aaron-Bird/rubiks-cube doesn't have a
clear license. Changes from rubik-js.git commit
4dd5dbf9b441007771609a8f9b62d262b6a5c63b (2020-04-24):

- three.js 63 -> 155 (2013 -> 2023)
- dropped the OrbitControls, jqeury, threex.domevent and threex.domevent.object3d dependencies
- moved to typescript
- ability to show a facelet string

Apart from the cube looking a little bit different, no functional
changes intended.

--- a/js/rubik/Makefile
+++ b/js/rubik/Makefile
@@ -6,7 +6,7 @@ else
 WEBPACK_OPTIONS = --mode=production
 endif
 
-bundle.js: main.ts tsconfig.json webpack.config.js package-lock.json Makefile config.mak
+bundle.js: main.ts rubik.ts tsconfig.json webpack.config.js package-lock.json Makefile config.mak
 	npx webpack ${WEBPACK_OPTIONS} --config webpack.config.js
 
 package-lock.json: package.json
@@ -16,7 +16,7 @@ package-lock.json: package.json
 check: check-lint
 
 check-lint:
-	npx eslint main.ts
+	npx eslint main.ts rubik.ts
 
 run:
 	python3 -m http.server
