--- a/js/rubik/package.json
+++ b/js/rubik/package.json
@@ -5,6 +5,8 @@
     "@types/three": "0.155.0",
     "@typescript-eslint/eslint-plugin": "5.59.1",
     "@typescript-eslint/parser": "5.59.1",
+    "@types/canvas-confetti": "1.4.2",
+    "canvas-confetti": "1.4.0",
     "eslint": "8.39.0",
     "nyc": "15.1.0",
     "three": "0.155.0",
