share-vmiklos-hu-apps: restore calc service after all
- doc was still referring on it
- the two other services are json-only
- yattag would be otherwise unuesd (and now update it)

--- a/share-vmiklos-hu-apps/Cargo.toml
+++ b/share-vmiklos-hu-apps/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+evalexpr = "11.1.0"
 html-escape = "0.2.13"
 hyphen = { path = "../hyphen" }
 rouille = "3.6.2"
