--- a/js/missing-housenumbers/tsconfig.json
+++ b/js/missing-housenumbers/tsconfig.json
@@ -1,10 +1,14 @@
 {
     "compilerOptions": {
         "target": "es5",
+	"sourceMap": true,
 	"noImplicitAny": true,
         "lib": [
             "dom",
             "es2016"
-        ]
+        ],
+	"module": "es6",
+	"esModuleInterop": true,
+	"moduleResolution": "node"
     }
 }
