weesearch: ignore accents
Chrome search does this by default with no easy way to disable it, so
let's try doing it without a flag to disable this.

--- a/weesearch/Cargo.toml
+++ b/weesearch/Cargo.toml
@@ -11,3 +11,4 @@ clap = { version = "4.4.7", features = ["derive"] }
 home = "0.5.5"
 regex = "1.10.2"
 time = { version = "0.3.30", features = ["formatting", "macros", "local-offset"] }
+unidecode = "0.3.0"
