weesearch, clap: switch from derive to builder
The fancy derive-style clap API generates a lot of magic code, avoid
that by switching to the builder API.

--- a/weesearch/Cargo.toml
+++ b/weesearch/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
-clap = { version = "4.4.7", features = ["derive"] }
+clap = "4.4.7"
 home = "0.5.5"
 regex = "1.10.2"
 time = { version = "0.3.30", features = ["formatting", "macros", "local-offset"] }
