--- a/weesearch/Cargo.toml
+++ b/weesearch/Cargo.toml
@@ -12,3 +12,4 @@ home = "0.5.5"
 regex = "1.10.2"
 time = { version = "0.3.30", features = ["formatting", "macros", "local-offset"] }
 unidecode = "0.3.0"
+vfs = "0.10.0"
