--- a/js/geniusz/package.json
+++ b/js/geniusz/package.json
@@ -8,6 +8,8 @@
     "@types/node": "17.0.0",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
+    "@types/shuffle-array": "1.0.2",
+    "array-shuffle": "3.0.0",
     "eslint": "8.4.1",
     "ts-loader": "9.2.6",
     "typescript": "4.5.4",
