--- a/js/mid/package.json
+++ b/js/mid/package.json
@@ -1,16 +1,14 @@
 {
   "license": "MIT",
   "dependencies": {
-    "@types/domready": "1.0.0",
     "@types/node": "14.14.7",
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/parser": "4.7.0",
-    "browserify": "17.0.0",
-    "domready": "1.0.8",
     "eslint": "7.13.0",
-    "tinyify": "3.0.0",
-    "tsify": "5.0.2",
-    "typescript": "4.0.5"
+    "ts-loader": "9.2.6",
+    "typescript": "4.0.5",
+    "webpack": "5.65.0",
+    "webpack-cli": "4.9.1"
   },
   "repository": {
     "type": "git",
