--- a/js/mid/tsconfig.json
+++ b/js/mid/tsconfig.json
@@ -1,10 +1,13 @@
 {
     "compilerOptions": {
         "target": "es5",
+	"sourceMap": true,
 	"noImplicitAny": true,
         "lib": [
             "dom",
             "es2016"
-        ]
+        ],
+	"module": "es6",
+	"moduleResolution": "node"
     }
 }
