--- a/js/loregression/package.json
+++ b/js/loregression/package.json
@@ -5,14 +5,13 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@types/domready": "1.0.0",
     "@types/node": "14.11.10",
     "@typescript-eslint/eslint-plugin": "4.4.1",
     "@typescript-eslint/parser": "4.4.1",
-    "domready": "1.0.8",
     "eslint": "7.11.0",
-    "tinyify": "3.0.0",
-    "tsify": "5.0.2",
-    "typescript": "4.0.3"
+    "ts-loader": "9.2.6",
+    "typescript": "4.0.3",
+    "webpack": "5.65.0",
+    "webpack-cli": "4.9.1"
   }
 }
