--- a/js/piroska/package.json
+++ b/js/piroska/package.json
@@ -5,17 +5,14 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@types/domready": "1.0.0",
-    "@types/node": "14.11.10",
-    "@typescript-eslint/eslint-plugin": "4.4.1",
-    "@typescript-eslint/parser": "4.4.1",
-    "browserify": "17.0.0",
-    "domready": "1.0.8",
-    "eslint": "7.11.0",
-    "tinyify": "3.0.0",
-    "ts-replace-all": "1.0.0",
-    "tsify": "5.0.2",
-    "typescript": "4.0.3"
+    "@types/node": "20.11.0",
+    "@typescript-eslint/eslint-plugin": "6.18.1",
+    "@typescript-eslint/parser": "6.18.1",
+    "eslint": "8.56.0",
+    "ts-loader": "9.5.1",
+    "typescript": "5.3.3",
+    "webpack": "5.89.0",
+    "webpack-cli": "5.1.4"
   },
   "repository": {
     "type": "git",
