js, missing-housenumbers-openlayers: switch from browserify
- also update dependencies

--- a/js/missing-housenumbers-openlayers/Makefile
+++ b/js/missing-housenumbers-openlayers/Makefile
@@ -1,22 +1,17 @@
 -include config.mak
 
-# openlayers requires these options
-BROWSERIFY_OPTIONS = -g [ babelify --presets [ "@babel/preset-env" ] ]
-
 ifneq ($(DEBUG),)
-# the source map here survives both tsc and the bundling
-BROWSERIFY_OPTIONS += --debug
+WEBPACK_OPTIONS = --mode=development --devtool inline-source-map
 else
-# tinyify works fine on the tsc output
-BROWSERIFY_OPTIONS += --plugin tinyify
+WEBPACK_OPTIONS = --mode=production
 endif
 
 INSTDIR=$(HOME)/git/vmiklos.hu/htdocs/osm/missing-housenumbers/
 
 all: bundle.js ol.css
 
-bundle.js: main.ts package-lock.json Makefile config.mak
-	browserify -o bundle.js $(BROWSERIFY_OPTIONS) --plugin tsify main.ts
+bundle.js: main.ts tsconfig.json webpack.config.js package-lock.json Makefile config.mak
+	npx webpack ${WEBPACK_OPTIONS} --config webpack.config.js
 
 ol.css: node_modules/ol/ol.css package-lock.json
 	cp node_modules/ol/ol.css .
@@ -29,7 +24,7 @@ run:
 	python3 -m http.server
 
 check:
-	node_modules/eslint/bin/eslint.js main.ts
+	npx eslint main.ts
 
 install:
 	cp *.kml index.html ol.css bundle.js $(INSTDIR)
