--- a/js/missing-housenumbers-openlayers/package.json
+++ b/js/missing-housenumbers-openlayers/package.json
@@ -5,21 +5,16 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "7.12.3",
-    "@babel/preset-env": "7.12.1",
-    "@types/domready": "1.0.0",
-    "@types/node": "14.11.10",
-    "@types/ol": "6.4.2",
-    "@typescript-eslint/eslint-plugin": "4.7.0",
-    "@typescript-eslint/parser": "4.7.0",
-    "babelify": "10.0.0",
-    "browserify": "17.0.0",
-    "domready": "1.0.8",
-    "eslint": "7.13.0",
-    "ol": "6.4.3",
-    "tinyify": "3.0.0",
-    "tsify": "5.0.2",
-    "typescript": "4.0.3"
+    "@types/node": "20.11.0",
+    "@types/ol": "7.0.0",
+    "@typescript-eslint/eslint-plugin": "6.18.1",
+    "@typescript-eslint/parser": "6.18.1",
+    "eslint": "8.56.0",
+    "ol": "8.2.0",
+    "ts-loader": "9.5.1",
+    "typescript": "5.3.3",
+    "webpack": "5.89.0",
+    "webpack-cli": "5.1.4"
   },
   "repository": {
     "type": "git",
