js, urlify: move to /pages

--- a/js/urlify/Makefile
+++ b/js/urlify/Makefile
@@ -19,4 +19,4 @@ run:
 	python3 -m http.server
 
 install:
-	scp index.html bundle.js wilson:share/urlify/
+	scp index.html bundle.js wilson:share/pages/urlify/
