--- a/share-vmiklos-hu-apps/Cargo.toml
+++ b/share-vmiklos-hu-apps/Cargo.toml
@@ -9,6 +9,7 @@ evalexpr = "11.1.0"
 html-escape = "0.2.13"
 hyphen = { path = "../hyphen" }
 rouille = "3.6.2"
+rubik = { path = "../rubik" }
 kewb = "0.4.1"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
