--- a/js/missing-housenumbers/package.json
+++ b/js/missing-housenumbers/package.json
@@ -1,25 +1,19 @@
 {
+  "name": "missing-housenumbers",
   "version": "1.0.0",
+  "description": "missing-housenumbers",
   "author": "Miklos Vajna",
   "license": "MIT",
-  "description": "missing-housenumbers-leaflet",
   "dependencies": {
-    "@types/domready": "1.0.1",
-    "@types/leaflet": "1.9.7",
-    "@types/node": "20.8.9",
-    "@typescript-eslint/eslint-plugin": "6.9.0",
-    "@typescript-eslint/parser": "6.9.0",
-    "domready": "1.0.8",
-    "eslint": "8.52.0",
+    "@types/leaflet": "1.9.11",
+    "@types/node": "20.11.20",
+    "@typescript-eslint/eslint-plugin": "7.0.2",
+    "@typescript-eslint/parser": "7.0.2",
+    "eslint": "8.57.0",
     "leaflet": "1.9.4",
-    "tinyify": "4.0.0",
-    "ts-loader": "9.5.0",
-    "typescript": "5.2.2",
-    "webpack": "5.89.0",
+    "ts-loader": "9.5.1",
+    "typescript": "5.3.3",
+    "webpack": "5.90.3",
     "webpack-cli": "5.1.4"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/vmiklos/vmexam"
   }
 }
