--- a/git-ls-projects/Cargo.toml
+++ b/git-ls-projects/Cargo.toml
@@ -8,4 +8,6 @@ anyhow = "1.0.86"
 glob = "0.3.1"
 home = "0.5.9"
 serde = { version = "1.0.202", features = ["derive"] }
+serde_json = "1.0.117"
+time = { version = "0.3.36", features = ["local-offset", "serde-well-known"] }
 toml = "0.8.13"
