--- a/git-ls-projects/Cargo.toml
+++ b/git-ls-projects/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
+clap = "4.5.4"
 glob = "0.3.1"
 home = "0.5.9"
 serde = { version = "1.0.202", features = ["derive"] }
