--- a/js/szamolo/package.json
+++ b/js/szamolo/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "szavak",
+  "name": "szamolo",
   "version": "1.0.0",
   "description": "szamolo",
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "5.7.0",
-    "@typescript-eslint/parser": "5.7.0",
-    "@types/canvas-confetti": "1.4.2",
-    "canvas-confetti": "1.4.0",
-    "eslint": "8.4.1",
-    "ts-loader": "9.2.6",
-    "typescript": "4.5.4",
-    "webpack": "5.76.1",
-    "webpack-cli": "4.9.1"
+    "@types/canvas-confetti": "1.6.4",
+    "@types/node": "20.12.13",
+    "@typescript-eslint/eslint-plugin": "7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
+    "canvas-confetti": "1.9.3",
+    "eslint": "8.57.0",
+    "ts-loader": "9.5.1",
+    "typescript": "5.4.5",
+    "webpack": "5.91.0",
+    "webpack-cli": "5.1.4"
   }
 }
