--- a/osm/addr-osmify-ts/package.json
+++ b/osm/addr-osmify-ts/package.json
@@ -20,6 +20,6 @@
     "@eslint/js": "^9.4.0",
     "eslint": "^9.4.0",
     "globals": "^15.3.0",
-    "typescript-eslint": "^7.11.0"
+    "typescript-eslint": "^8.0.0-alpha.10"
   }
 }
