--- a/osm/addr-osmify-py/Makefile
+++ b/osm/addr-osmify-py/Makefile
@@ -1,8 +1,9 @@
 build: Makefile
-	mypy --python-version 3.6 --strict --no-error-summary addr_osmify.py
-	mypy --python-version 3.6 --strict --no-error-summary test_addr_osmify.py
+	mypy --python-version 3.11 --strict --no-error-summary addr_osmify.py
+	mypy --python-version 3.11 --strict --no-error-summary test_addr_osmify.py
 
 check: build check-unit check-format check-lint
+	@echo "make check: ok"
 
 check-format:
 	flake8 addr_osmify.py
