--- a/fit2json/Cargo.toml
+++ b/fit2json/Cargo.toml
@@ -8,3 +8,6 @@ anyhow = "1.0.86"
 clap = { version = "4.5.7", features = ["derive"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.118"
+sxd-document = "0.3.2"
+sxd-xpath = "0.4.2"
+tempfile = "3.10.1"
