--- a/fit2json/Cargo.toml
+++ b/fit2json/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
+base64 = "0.22.1"
 clap = { version = "4.5.7", features = ["derive"] }
+rand = "0.8.5"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.118"
 sxd-document = "0.3.2"
