--- a/darcs-git/Cargo.toml
+++ b/darcs-git/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
-clap = { version = "4.5.4", features = ["derive"] }
+clap = "4.5.4"
 libc = "0.2.155"
 termios = "0.3.3"
