--- a/osm/addr-osmify-ts/package.json
+++ b/osm/addr-osmify-ts/package.json
@@ -1,15 +1,15 @@
 {
   "license": "MIT",
   "dependencies": {
-    "@cypress/code-coverage": "3.12.39",
+    "@cypress/code-coverage": "3.12.45",
     "@jsdevtools/coverage-istanbul-loader": "3.0.5",
-    "@types/node": "20.13.0",
-    "cypress": "13.10.0",
-    "nyc": "15.1.0",
+    "@types/node": "22.5.0",
+    "cypress": "13.13.3",
+    "nyc": "17.0.0",
     "ts-loader": "9.5.1",
-    "typescript": "5.4.5",
-    "wait-on": "7.2.0",
-    "webpack": "5.91.0",
+    "typescript": "5.5.4",
+    "wait-on": "8.0.0",
+    "webpack": "5.94.0",
     "webpack-cli": "5.1.4"
   },
   "repository": {
@@ -17,9 +17,9 @@
     "url": "https://github.com/vmiklos/vmexam"
   },
   "devDependencies": {
-    "@eslint/js": "^9.4.0",
-    "eslint": "^9.4.0",
-    "globals": "^15.3.0",
-    "typescript-eslint": "^8.0.0-alpha.10"
+    "@eslint/js": "9.9.1",
+    "eslint": "9.9.1",
+    "globals": "15.9.0",
+    "typescript-eslint": "8.2.0"
   }
 }
