pdfcal-rs: invoke pcal + convert to pdf

--- a/pdfcal/Cargo.toml
+++ b/pdfcal/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 anyhow = "1.0.95"
 image = "0.25.5"
 pdfium-render = "0.8.27"
+sys-locale = "0.3.2"
 tempfile = "3.14.0"
+time = "0.3.37"
