--- a/csp/Cargo.toml
+++ b/csp/Cargo.toml
@@ -10,3 +10,5 @@ anyhow = "1.0.97"
 clap = { version = "4.5.4", features = ["derive"] }
 num_enum = "0.7.3"
 puzzle-solver = "0.4.1"
+strum = "0.27.1"
+strum_macros = "0.27.1"
