addr-osmify-java: fix this to work again
The maven-assembly-plugin was not versioned and is now broken, so fix it
and lock down the version.

--- a/osm/addr-osmify-java/Makefile
+++ b/osm/addr-osmify-java/Makefile
@@ -1,5 +1,5 @@
 all:
-	mvn assembly:assembly -DdescriptorId=jar-with-dependencies
+	mvn package
 
 run:
 	java -jar target/addr-osmify-1.0-SNAPSHOT-jar-with-dependencies.jar
