--- a/osm/addr-osmify-java/pom.xml
+++ b/osm/addr-osmify-java/pom.xml
@@ -37,7 +37,6 @@
   </dependencies>
 
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
@@ -80,15 +79,27 @@
         </plugin>
     <plugin>
       <artifactId>maven-assembly-plugin</artifactId>
+      <version>3.7.1</version>
       <configuration>
         <archive>
           <manifest>
             <mainClass>hu.vmiklos.addr_osmify.App</mainClass>
           </manifest>
         </archive>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
       </configuration>
+      <executions>
+        <execution>
+          <id>make-assembly</id>
+          <phase>package</phase>
+          <goals>
+            <goal>single</goal>
+          </goals>
+        </execution>
+      </executions>
     </plugin>
       </plugins>
-    </pluginManagement>
   </build>
 </project>
