--- a/fit2json/Cargo.toml
+++ b/fit2json/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "4.5.7", features = ["derive"] }
 rand = "0.8.5"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.118"
+time = { version = "0.3.41", features = ["formatting", "local-offset", "parsing"] }
