osm/addr-osmify-go: update dependencies (2025)

--- a/osm/addr-osmify-go/Makefile
+++ b/osm/addr-osmify-go/Makefile
@@ -8,16 +8,21 @@ GO_OBJECTS = \
 addr-osmify-go: Makefile addr_osmify.go
 	go build
 
-check: check-format check-lint check-race check-unit
+check: check-format check-lint check-unit check-headers check-static
 
 check-lint:
 	golint -set_exit_status
 
+# Without coverage: 'go test ./...'.
 check-unit:
-	./coverage.sh
+	go build ./...
+	courtney -e ./...
 
 check-format:
 	[ -z "$(shell gofmt -l $(GO_OBJECTS))" ]
 
-check-race:
-	go test -race
+check-headers:
+	addlicense -c '$(shell git config user.name)' -ignore '.github/**' -ignore 'guide/book/**' -l mit -s=only -check .
+
+check-static:
+	staticcheck ./...
