addr-osmify-kotlin: update dependencies (2025)
And in general fix this to work again. The maven-assembly-plugin was not
versioned and is now broken, so fix it and lock down the version.

Then do the actual dependency updates.

--- a/osm/addr-osmify-kotlin/Makefile
+++ b/osm/addr-osmify-kotlin/Makefile
@@ -1,8 +1,11 @@
 all:
-	mvn assembly:assembly -DdescriptorId=jar-with-dependencies
+	mvn package
 
 run:
 	java -jar target/addr-osmify-1.0-SNAPSHOT-jar-with-dependencies.jar
 
 check: all
 	ktlint "src/**/*.kt"
+
+check-outdated:
+	mvn versions:display-dependency-updates
