--- a/osm/addr-osmify-kotlin/pom.xml
+++ b/osm/addr-osmify-kotlin/pom.xml
@@ -13,8 +13,8 @@
     <url>https://vmiklos.hu</url>
 
     <properties>
-        <kotlin.version>1.6.0</kotlin.version>
-        <junit.version>4.13.1</junit.version>
+        <kotlin.version>2.2.0</kotlin.version>
+        <junit.version>4.13.2</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -40,12 +40,12 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.14.0</version>
+            <version>2.19.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.9</version>
+            <version>2.13.1</version>
         </dependency>
     </dependencies>
 
@@ -88,13 +88,31 @@
             </plugin>
             <plugin>
               <artifactId>maven-assembly-plugin</artifactId>
+              <version>3.7.1</version>
               <configuration>
                 <archive>
                   <manifest>
                     <mainClass>hu.vmiklos.addr_osmify.AppKt</mainClass>
                   </manifest>
                 </archive>
+                <descriptorRefs>
+                  <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
               </configuration>
+              <executions>
+                <execution>
+                  <id>make-assembly</id>
+                  <phase>package</phase>
+                  <goals>
+                    <goal>single</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>versions-maven-plugin</artifactId>
+              <version>2.5</version>
             </plugin>
         </plugins>
     </build>
