--- a/osm/addr-osmify-kotlin/pom.xml
+++ b/osm/addr-osmify-kotlin/pom.xml
@@ -54,6 +54,26 @@
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
         <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>3.5.0</version>
+          <executions>
+            <execution>
+             <id>enforce-maven</id>
+              <goals>
+                <goal>enforce</goal>
+              </goals>
+              <configuration>
+                <rules>
+                    <requireMavenVersion>
+                      <version>3.9.9</version>
+                    </requireMavenVersion>
+                </rules>
+              </configuration>
+              </execution>
+            </executions>
+            </plugin>
             <plugin>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <groupId>org.jetbrains.kotlin</groupId>
@@ -84,7 +104,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.4.2</version>
             </plugin>
             <plugin>
               <artifactId>maven-assembly-plugin</artifactId>
@@ -112,7 +132,7 @@
             <plugin>
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>versions-maven-plugin</artifactId>
-              <version>2.5</version>
+              <version>2.18.0</version>
             </plugin>
         </plugins>
     </build>
