--- a/cap2exif/Cargo.toml
+++ b/cap2exif/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
+clap = "4.5.41"
 rexiv2 = "0.10.0"
+time = { version = "0.3.41", features = ["formatting", "parsing"] }
