--- a/qemu/exec-server/Cargo.toml
+++ b/qemu/exec-server/Cargo.toml
@@ -8,3 +8,6 @@ anyhow = "1.0.98"
 rouille = "3.6.2"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
+
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.52.0", features = ["Win32_System_Threading"] }
