js, skel: update dependencies (2025)

--- a/js/skel/tsconfig.json
+++ b/js/skel/tsconfig.json
@@ -3,6 +3,7 @@
         "target": "es5",
 	"sourceMap": true,
 	"strict": true,
+	"erasableSyntaxOnly": true,
         "lib": [
             "dom",
             "es2016"
