js, comment: update dependencies (2025)

--- a/js/comment/tsconfig.json
+++ b/js/comment/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "target": "es5",
 	"sourceMap": true,
-	"noImplicitAny": true,
+	"strict": true,
+	"erasableSyntaxOnly": true,
         "lib": [
             "dom",
             "es2016"
