--- a/js/comment/package.json
+++ b/js/comment/package.json
@@ -5,13 +5,14 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "20.11.20",
-    "@typescript-eslint/eslint-plugin": "7.0.2",
-    "@typescript-eslint/parser": "7.0.2",
-    "eslint": "8.57.0",
-    "ts-loader": "9.5.1",
-    "typescript": "5.3.3",
-    "webpack": "5.94.0",
-    "webpack-cli": "5.1.4"
+    "@types/node": "24.4.0",
+    "@typescript-eslint/eslint-plugin": "8.44.0",
+    "@typescript-eslint/parser": "8.44.0",
+    "eslint": "9.35.0",
+    "ts-loader": "9.5.4",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.44.0",
+    "webpack": "5.101.3",
+    "webpack-cli": "6.0.1"
   }
 }
