--- a/js/geniusz/package.json
+++ b/js/geniusz/package.json
@@ -5,15 +5,16 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "5.7.0",
-    "@typescript-eslint/parser": "5.7.0",
+    "@types/node": "24.4.0",
+    "@typescript-eslint/eslint-plugin": "8.44.0",
+    "@typescript-eslint/parser": "8.44.0",
     "@types/shuffle-array": "1.0.2",
     "array-shuffle": "3.0.0",
-    "eslint": "8.4.1",
-    "ts-loader": "9.2.6",
-    "typescript": "4.5.4",
-    "webpack": "5.94.0",
-    "webpack-cli": "4.9.1"
+    "eslint": "9.35.0",
+    "ts-loader": "9.5.4",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.44.0",
+    "webpack": "5.101.3",
+    "webpack-cli": "6.0.1"
   }
 }
