js/ovis-ora: update dependencies (2025)

--- a/js/ovis-ora/Makefile
+++ b/js/ovis-ora/Makefile
@@ -1,7 +1,7 @@
 -include config.mak
 
 ifneq ($(DEBUG),)
-WEBPACK_OPTIONS = --mode=development
+WEBPACK_OPTIONS = --mode=development --devtool inline-source-map
 else
 WEBPACK_OPTIONS = --mode=production
 endif
@@ -11,13 +11,15 @@ bundle.js: main.ts tsconfig.json webpack.config.js package-lock.json Makefile co
 
 package-lock.json: package.json
 	npm install
-	touch package-lock.json
+
+config.mak:
+	touch config.mak
 
 check:
 	npx eslint main.ts
 
-install:
-	scp index.html bundle.js smiley.svg wilson:share/ovis-ora/
-
 run:
 	python3 -m http.server
+
+install:
+	scp index.html bundle.js smiley.svg wilson:share/pages/ovis-ora/
