--- a/js/ovis-ora/package.json
+++ b/js/ovis-ora/package.json
@@ -5,15 +5,15 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
+    "@eslint/js": "9.34.0",
     "@types/canvas-confetti": "1.6.4",
-    "@types/node": "20.10.8",
-    "@typescript-eslint/eslint-plugin": "6.18.1",
-    "@typescript-eslint/parser": "6.18.1",
+    "@types/node": "24.4.0",
     "canvas-confetti": "1.9.2",
-    "eslint": "8.56.0",
-    "ts-loader": "9.5.1",
-    "typescript": "5.3.3",
-    "webpack": "5.94.0",
-    "webpack-cli": "5.1.4"
+    "eslint": "9.35.0",
+    "ts-loader": "9.5.4",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.44.0",
+    "webpack": "5.101.3",
+    "webpack-cli": "6.0.1"
   }
 }
