--- a/js/piroska/package.json
+++ b/js/piroska/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "addr-osmify-ts",
+  "name": "piroska",
   "version": "1.0.0",
-  "description": "addr-osmify-ts",
+  "description": "piroska",
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "20.11.0",
-    "@typescript-eslint/eslint-plugin": "6.18.1",
-    "@typescript-eslint/parser": "6.18.1",
-    "eslint": "8.56.0",
-    "ts-loader": "9.5.1",
-    "typescript": "5.3.3",
-    "webpack": "5.94.0",
-    "webpack-cli": "5.1.4"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/vmiklos/vmexam"
+    "@types/node": "24.4.0",
+    "eslint": "9.35.0",
+    "ts-loader": "9.5.4",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.44.0",
+    "webpack": "5.101.3",
+    "webpack-cli": "6.0.1"
   }
 }
