--- a/js/private-pois/package.json
+++ b/js/private-pois/package.json
@@ -1,22 +1,18 @@
 {
+  "name": "private-pois",
   "version": "1.0.0",
+  "description": "private-pois",
   "author": "Miklos Vajna",
   "license": "MIT",
-  "description": "private-pois",
   "dependencies": {
-    "@types/leaflet": "1.9.8",
-    "@types/node": "20.11.0",
-    "@typescript-eslint/eslint-plugin": "6.18.1",
-    "@typescript-eslint/parser": "6.18.1",
-    "eslint": "8.56.0",
+    "@types/leaflet": "1.9.20",
+    "@types/node": "24.7.0",
+    "eslint": "9.37.0",
     "leaflet": "1.9.4",
-    "ts-loader": "9.5.1",
-    "typescript": "5.3.3",
-    "webpack": "5.94.0",
-    "webpack-cli": "5.1.4"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/vmiklos/vmexam"
+    "ts-loader": "9.5.4",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.45.0",
+    "webpack": "5.102.0",
+    "webpack-cli": "6.0.1"
   }
 }
