--- a/js/rubik-scramble/package.json
+++ b/js/rubik-scramble/package.json
@@ -5,13 +5,12 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "20.11.20",
-    "@typescript-eslint/eslint-plugin": "7.0.2",
-    "@typescript-eslint/parser": "7.0.2",
-    "eslint": "8.57.0",
-    "ts-loader": "9.5.1",
-    "typescript": "5.3.3",
-    "webpack": "5.94.0",
-    "webpack-cli": "5.1.4"
+    "@types/node": "24.7.0",
+    "eslint": "9.37.0",
+    "ts-loader": "9.5.4",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.46.0",
+    "webpack": "5.102.0",
+    "webpack-cli": "6.0.1"
   }
 }
