--- a/js/rubik-scramble/tsconfig.json
+++ b/js/rubik-scramble/tsconfig.json
@@ -2,10 +2,11 @@
     "compilerOptions": {
         "target": "es5",
 	"sourceMap": true,
-	"noImplicitAny": true,
+	"strict": true,
+	"erasableSyntaxOnly": true,
         "lib": [
             "dom",
-            "es2016"
+            "es2021"
         ],
 	"module": "es6",
 	"moduleResolution": "node"
