--- a/js/rubik/package.json
+++ b/js/rubik/package.json
@@ -1,22 +1,20 @@
 {
+  "name": "rubik",
+  "version": "1.0.0",
+  "description": "rubik",
+  "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "18.16.1",
-    "@types/three": "0.155.0",
-    "@typescript-eslint/eslint-plugin": "5.59.1",
-    "@typescript-eslint/parser": "5.59.1",
-    "@types/canvas-confetti": "1.4.2",
-    "canvas-confetti": "1.4.0",
-    "eslint": "8.39.0",
-    "nyc": "15.1.0",
-    "three": "0.155.0",
-    "ts-loader": "9.4.2",
-    "typescript": "5.0.4",
-    "webpack": "5.94.0",
-    "webpack-cli": "5.0.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/vmiklos/vmexam"
+    "@types/canvas-confetti": "1.9.0",
+    "@types/node": "24.7.0",
+    "@types/three": "0.180.0",
+    "canvas-confetti": "1.9.3",
+    "eslint": "9.37.0",
+    "three": "0.180.0",
+    "ts-loader": "9.5.4",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.46.0",
+    "webpack": "5.102.1",
+    "webpack-cli": "6.0.1"
   }
 }
