--- a/js/szamolo/package.json
+++ b/js/szamolo/package.json
@@ -5,15 +5,14 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@types/canvas-confetti": "1.6.4",
-    "@types/node": "20.12.13",
-    "@typescript-eslint/eslint-plugin": "7.11.0",
-    "@typescript-eslint/parser": "7.11.0",
+    "@types/canvas-confetti": "1.9.0",
+    "@types/node": "24.7.1",
     "canvas-confetti": "1.9.3",
-    "eslint": "8.57.0",
-    "ts-loader": "9.5.1",
-    "typescript": "5.4.5",
-    "webpack": "5.94.0",
-    "webpack-cli": "5.1.4"
+    "eslint": "9.37.0",
+    "ts-loader": "9.5.4",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.46.0",
+    "webpack": "5.102.1",
+    "webpack-cli": "6.0.1"
   }
 }
