--- a/js/szihkcal/package.json
+++ b/js/szihkcal/package.json
@@ -1,22 +1,20 @@
 {
+  "name": "szihkcal",
+  "version": "1.0.0",
+  "description": "szihkcal",
+  "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "20.11.0",
+    "@types/node": "24.7.1",
     "@types/calendar": "0.1.4",
     "@types/seed-random": "2.2.4",
-    "@typescript-eslint/eslint-plugin": "6.18.1",
-    "@typescript-eslint/parser": "6.18.1",
-    "cldr": "7.5.0",
-    "eslint": "8.56.0",
+    "eslint": "9.37.0",
     "calendar": "0.1.1",
     "seed-random": "2.2.0",
-    "ts-loader": "9.5.1",
-    "typescript": "5.3.3",
-    "webpack": "5.94.0",
-    "webpack-cli": "5.1.4"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/vmiklos/vmexam"
+    "ts-loader": "9.5.4",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.46.0",
+    "webpack": "5.102.1",
+    "webpack-cli": "6.0.1"
   }
 }
