--- a/js/szihkcal/tsconfig.json
+++ b/js/szihkcal/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "es6",
 	"sourceMap": true,
-	"noImplicitAny": true,
+	"strict": true,
+	"erasableSyntaxOnly": true,
         "lib": [
             "dom",
-            "es2016"
+            "es2021"
         ],
 	"module": "es6",
 	"moduleResolution": "node"
