dioxus: add init script to copy from skel

--- a/dioxus/skel/Dioxus.toml
+++ b/dioxus/skel/Dioxus.toml
@@ -5,7 +5,7 @@
 # HTML title tag content
 title = "skel"
 
-base_path = "/pages/dioxus/skel/"
+base_path = "/pages/skel/"
 
 # include `assets` in web platform
 [web.resource]
