--- a/dioxus/skel/Makefile
+++ b/dioxus/skel/Makefile
@@ -2,5 +2,6 @@ run:
 	dx serve
 
 install:
+	rm -rf target/dx/skel/release/web/public/
 	dx build --release
-	cd target/dx/skel/release/web/public/ && rsync -avP . wilson:share/pages/dioxus/skel/
+	cd target/dx/skel/release/web/public/ && rsync -avP --delete-after . ~/git/vmiklos.hu/pages/skel/
