dioxus, rubik-scramble: add Android app icon
Till DioxusLabs/dioxus #3685 is fixed, this can be used like:

cd target/dx/rubik-scramble/release/android/app/
./gradlew clean
cp ../../../../../../assets/icon.xml app/src/main/res/mipmap-anydpi-v26/ic_launcher.xml
ANDROID_HOME=~/Android/Sdk/ ANDROID_NDK_HOME=~/Android/Sdk/ndk/current/ ./gradlew assembleRelease
cd ../../../../../..
~/Android/Sdk/build-tools/current/apksigner sign --ks my-release-key.keystore target/dx/rubik-scramble/release/android/app/app/build/outputs/apk/release/app-release-unsigned.apk
adb install -r target/dx/rubik-scramble/release/android/app/app/build/outputs/apk/release/app-release-unsigned.apk

--- a/dioxus/rubik-scramble/Dioxus.toml
+++ b/dioxus/rubik-scramble/Dioxus.toml
@@ -21,3 +21,8 @@ script = []
 # Javascript code file
 # serve: [dev-server] only
 script = []
+
+[bundle]
+identifier = "hu.vmiklos.rubik_scramble"
+publisher = "Miklos Vajna"
+icon = ["assets/icon.xml"]
